--- a/index.html
+++ b/index.html
@@ -83,15 +83,15 @@
         </div>
         <div class="product-card">
           <img src="images\dining.png" alt="Furniture 2">
-          <p>Wooden Table</p>
+          <p>Dining Tables Table</p>
         </div>
         <div class="product-card">
           <img src="images/Borcelle.png" alt="Furniture 3">
-          <p>Comfy Chair</p>
+          <p>Beds</p>
         </div>
         <div class="product-card">
           <img src="images\all.png" alt="Furniture 4">
-          <p>Elegant Bed</p>
+          <p>Closets Shoes Shelf and Many</p>
         </div>
       </div>
     </div>
