--- a/index.html
+++ b/index.html
@@ -11,6 +11,12 @@
   <div class="container">
     <h1>Galaxy Furniture</h1>
 
+
+    <!-- Logo Section -->
+<div class="logo-container">
+  <div class="logo"></div>
+</div>
+
     <!-- Social Media Buttons -->
     <div class="social-media-buttons">
       <a href="https://www.tiktok.com/@galaxyfurnitureet?_t=8oN60dmx3e2&_r=1" target="_blank" class="social-button">
